--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
 request==2019.4.13
 requests==2.20.0
-requests-oauthlib==1.2.0
 Flask==1.0.2
-smtplib
-pyrebase
-json
-re
-random
-
+Pyrebase==3.0.27 
+regex==2019.08.19
+gunicorn==19.9.0
